2005-04-08  Jeff Martin <jeff@custommonkey.org>

	* Makefile.am, faq-hack.xsl, faq.xml, conglomerate.xml, global.ent

	Added temporary transform to replace qanda sets in docbook with sections
	Added faq to main conglomerate manual
	Fixed conglomerate.xml dtd

2005-02-01  Geert Stappers <stappers@stappers.nl>

	* conglomerate.xml

	Replaced <book> with <book id="index">
	for bugzilla #164744

2005-01-31  Geert Stappers <stappers@stappers.nl>

	* faq.xml

	Full URL to display spec files.

2005-01-02  Michele Garoche  <michele.garoche@easyconnect.fr>

	* cong_element_map_ref.xml

	Added id to second section so that it is displayed in the left panel
	
2004-10-15  Hervé Cauwelier <debian@oursours.net>

	* Makefile.am: Added faq.xml to be deleted on uninstall.

2004-07-24  Geert Stappers <stappers@stappers.nl>

	* conglomerate.1

	Regenerated with manpage.make

2004-07-24  Mich?le Garoche  <michele.garoche@easyconnect.fr>

	* conglomerate-refentry.xml

	Various typo fixes

2004-02-03  David Malcolm <david@davemalcolm.demon.co.uk>

	* faq.xml

	Updated to refer to service-id rather than plugin-id where appropriate

	* faq.xml

	Added TEI to DTD list; added notes about hooking up plugins in xds files

2004-01-14  Jeff Martin <jeff@custommonkey.org>
	
	* Makefile.am

	Add cong_element_map_ref.xml, conventions.xml, doc_type_support.xml, global.ent, glossary.xml, notice_fdl.xml, notice_gpl.xml, row_xml_lang_attrib.xml, tbl_element_attrib.xml to list of entities

2004-01-13  David Malcolm <david@davemalcolm.demon.co.uk>

	* conglomerate.xml

	Committed Sean Wheller's new User Manual over the top of Jeff Martin's old one

	* xds_dtd_def.xml

	Oops; missed one

	* cong_element_map_ref.xml, conventions.xml, doc_type_support.xml, global.ent, glossary.xml, notice_fdl.xml, notice_gpl.xml, row_xml_lang_attrib.xml, tbl_element_attrib.xml

	Added Sean Wheller's new documentation files

2004-01-08  Sean Wheller <sean@enbaya.co.za>

	* faq.xml

	root and DTD name now are matching.
