@@ -1,4 +1,5 @@
 Makefile
 Makefile.in
 conglomerate-C.omf.out
+faq.xml
 omf_timestamp
