@@ -1,3 +1,10 @@
+2005-04-08  Geert Stappers <stappers@stappers.nl>
+
+	* faq.xml.qna
+
+	New, temporary file, needed for "faq-hack.xsl".
+	It is in fact a rename of faq.xml
+
 2005-04-08  Jeff Martin <jeff@custommonkey.org>
 
 	* Makefile.am, faq-hack.xsl, faq.xml, conglomerate.xml, global.ent
